# openai_completions_agent_handler

./: .gitignore  README.md  pyproject.toml
docs/: development-plan.md
openai_completions_agent_handler/: __init__.py  configuration_schema.json  openai_completions_agent_handler.py
