[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenAI-Completions-Agent-Handler"
version = "0.0.1"
description = "OpenAI Completions Agent Handler"
authors = [
    {name = "IdeaBosque", email = "ideabosque@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "SilvaEngine-Utility",
    "AI-Agent-Handler",
    "openai>=1.40,<2",
    "httpx>=0.27,<1",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[tool.pyright]
typeCheckingMode = "basic"
reportCallIssue = "none"
reportArgumentType = "none"
reportOperatorIssue = "none"
reportAttributeAccessIssue = "none"